--- a/css/rechtliches.css
+++ b/css/rechtliches.css
@@ -1,31 +1,33 @@
-
-
-
-disclaimer{
-    text-align:left;
-    width: 45%;
+html{
+    color: white;
+    text-align: center;
 }
 
-disclaimer h1{
+
+
+main .disclaimer{
+    text-align:left;
+    width: 35%;
+    color: #fff;
+    margin: auto;
+}
+
+main .disclaimer h1{
     font-family: 'Zwizz Regular';
     margin-left: -30px;
 }
 
-disclaimer p{
+main .disclaimer p{
     color: #818181;
     padding-left: 20px;
 }
 
-disclaimer a{
+main .disclaimer a{
     color:#7c43bd;
     transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
-disclaimer a:hover{
+main .disclaimer a:hover{
     color:#dec0ff;
     transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-
-main{
-    width: 45%;
 }
