added product table gallerys

--- a/css/main-stylesheet.css
+++ b/css/main-stylesheet.css
@@ -125,3 +125,13 @@ footer p{
     margin-bottom: 10px;
   }
 
+
+
+.column-container{
+    display: table;
+    width: 100%;
+}
+
+.column{
+    display: table-cell;
+}
