--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,8 +1,9 @@
 nav{
 height: 42px;
-background: #4a148c;
+background: #7c43bd;
 font-family: Zwizz Bold;
 border-bottom: 0.5px solid #fff;
+
 }
 
 nav ul {  
