--- a/css/main-stylesheet.css
+++ b/css/main-stylesheet.css
@@ -145,36 +145,44 @@ footer p{
     /* PRODUKTGALERIE */
 
 div.galleryWrapper{
-    margin: auto;
+    margin: auto; /* Make the container element behave like a table */
     width: 75%;
 }
 
-  div.galleryItem {
-  margin: 5px;
-  border: 1px solid #ccc;
-  float: left;  width: 180px;
-      transition: .5s ease;
+
+  .column1,.column2 {
+    box-sizing: border-box;
+    padding:0px;
+  }
+  
+  /* Create two equal columns that floats next to each other */
+  .column1 {
+    float: left;
+    text-align:center;
+    padding-top:10px;
+    width: 30%;
+    height: 200px; /* Should be removed. Only for demonstration */
+  }
+  
+  .column2 {
+    float: left;
+    width: 70%;
+    padding: 10px;
+    height: 200px; /* Should be removed. Only for demonstration */
+  }
+  
+  .row {
+
+    border: 1px solid #777;
+    transition: .6s ease;
+    margin: 5px;
   }
 
-  div.galleryItem:hover {
-  border: 1px solid #777;
-  cursor: pointer;
-  box-shadow: 0px 0px 8px white;
-  transition: .3s ease;
-  }
-
-  div.galleryItem img {
-  width: 100%;
-  height: auto;
-  }
-
-  div.desc {
-  padding: 15px;
-  text-align: center;
-  }
-
-  div.price {
-    padding: 4px;
-    text-align: right;
-    font-size: 16pt;
+  
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
   }
