--- a/css/main-stylesheet.css
+++ b/css/main-stylesheet.css
@@ -48,31 +48,31 @@ body::-webkit-scrollbar {
 
 
 a{
-    color: white;
+    color: black;
     text-decoration: none;
-    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 a:hover{
-    color: grey;
-    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+    color: rgb(190, 190, 190);
+    transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 /* KNOPF GLOBAL */
 
 button{
     border: none;
-    background-color: #7c43bd;
-    color: white;
+    background-color: #ffffff;
+    color: black;
     font-size: 12pt;
     font-family: 'Zwizz Bold';
-    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 button:hover{
     border: none;
-    background-color: #4a148c;
-    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+    color: rgb(190, 190, 190);
+    transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
     cursor: pointer;
 }
 
@@ -115,9 +115,9 @@ footer p{
 
 .blur-rule {
     text-align: center;
-    height: 0.6px;
+    height: 1px;
     width: 79%;
-    background-color: #4a148c;
+    background-color: #ffffff;
     margin: 20px 0;
     display: block;
     margin: auto;
@@ -130,12 +130,29 @@ footer p{
 
 
 
+#deleteUser{
+    border: none;
+    background-color: #ffffff;
+    color: white;
+    font-size: 12pt;
+    font-family: 'Zwizz Bold';
+    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+#deleteUser:hover{
+    border: none;
+    background-color: darkred;
+    transition: 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+    cursor: pointer;
+}
 
 
 
 
 
-
+h3{
+    font-size:45pt;
+}
 
 
 
