--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,8 +1,9 @@
 nav{
 height: 42px;
-background: #7c43bd;
+background: #ffffff;
 font-family: Zwizz Bold;
-border-bottom: 0.5px solid #fff;
+border-bottom: 2px solid grey;
+border-top: 2px solid grey;
 
 }
 
@@ -33,8 +34,8 @@ nav ul {
 
 
   nav li{
-    border-right: 0.75px solid white;
-    border-left: 0.75px solid white;
+    border-right: 0.75px solid black;
+    border-left: 0.75px solid black;
     height: 40%;
     padding-left: 8px;
     padding-right: 8px;
