--- a/login/css/loginregister.css
+++ b/login/css/loginregister.css
@@ -47,7 +47,7 @@ input[type=text] {
 
 fieldset{
     width: 65%;
-    box-shadow: 0px 0px 7px #4a148c;
+    box-shadow: 0px 0px 5px #ffffff;
     text-align: center;
     margin:auto;
     background-color: black; /* HINTEGRUND DER INHALTE BLEIBT SCHWARZ, VORHER NUR WEGEN TRANSPARENZ UND WEGEN SCHWARZEM HTML DOKUMENT, SCHWARZ GEWESEN */
@@ -58,6 +58,15 @@ h1{
     font-size: 30pt;
 }
 
+
+.optionLink1{
+    color:white;
+}
+
+
+.optionLink1:hover{
+    color:grey;
+}
 
 /* LINKS */
 
