--- a/css/main-stylesheet.css
+++ b/css/main-stylesheet.css
@@ -48,7 +48,7 @@ body::-webkit-scrollbar {
 
 
 a{
-    color: black;
+    color: white;
     text-decoration: none;
     transition: 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
@@ -56,6 +56,18 @@ a{
 a:hover{
     color: rgb(190, 190, 190);
     transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+
+header a{
+  color: black;
+  text-decoration: none;
+  transition: 0.7s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+header a:hover{
+  color: rgb(190, 190, 190);
+  transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 /* KNOPF GLOBAL */
@@ -248,3 +260,30 @@ div.galleryWrapper{
      50% { opacity: 0.0; }
      100% { opacity: 1.0; }
      }
+
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+
+
+
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* TESTZWECKE CSS BEREICH !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
